--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 flask-sqlalchemy = "*"
 flask = "*"
 pymysql = "*"
+billboard-viewer = {editable = true,path = "."}
 
 [requires]
 python_version = "3.7"
