--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ flask-sqlalchemy = "*"
 flask = "*"
 pymysql = "*"
 billboard-viewer = {editable = true,path = "."}
+cryptography = "*"
 
 [requires]
 python_version = "3.7"
