--- a/DockerFile
+++ b/DockerFile
@@ -1,11 +1,14 @@
 FROM python:3.7-buster
 
-COPY . /app
+COPY ./Pipfile /app/Pipfile
+COPY ./Pipfile.lock /app/Pipfile.lock
 
 WORKDIR /app
 
 RUN pip3 install pipenv
 RUN pipenv install
+
+COPY . /app
 
 EXPOSE 5000
 
