--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,17 +4,23 @@ stages:
 
 before_script:
   - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-  - echo "before script"
 
 variables:
   pipeline_id: $CI_PIPELINE_IID
 
 build_image:
   stage: build
-  script: docker build --pull --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:latest .
+  script:
+    - docker build --pull --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA .
+    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
 
-push_image:
+push_latest:
+  variables:
+    GIT_STRATEGY: none
+  only:
+    - master
   stage: push
   script:
-    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+    - docker pull $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+    - docker tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA $CI_REGISTRY_IMAGE:latest
     - docker push $CI_REGISTRY_IMAGE:latest
