I don't know how these variables work

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,8 @@ stages:
   - push
 
 variables:
-  pipeline_id:
-    - $CI_JOB_TOKEN
-    - $CI_REGISTRY
+  - CI_JOB_TOKEN
+  - CI_REGISTRY
 
 before_script:
   - echo -n $CI_JOB_TOKEN | docker login -u gitlab-ci-token --password-stdin $CI_REGISTRY
