--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,14 @@
 image: "docker:19.03.3"
 
+services:
+  - docker:19.03.3-dind
+
 stages:
   - build
   - push
 
 before_script:
+  - docker info
   - echo -n $CI_JOB_TOKEN | docker login -u gitlab-ci-token --password-stdin $CI_REGISTRY
 
 build_image:
