--- a/DockerFile
+++ b/DockerFile
@@ -12,4 +12,6 @@ COPY . /app
 
 EXPOSE 5000
 
-CMD [ "pipenv", "run", "python", "application.py" ]
+CMD ["python", "application.py" ]
+
+ENTRYPOINT [ "pipenv", "run" ]
