--- a/DockerFile
+++ b/DockerFile
@@ -7,11 +7,11 @@ WORKDIR /app
 
 RUN pip3 install pipenv
 RUN pipenv install
+RUN pipenv install gunicorn
 
 COPY . /app
 
-EXPOSE 5000
-
-CMD ["python", "application.py" ]
+EXPOSE 8000
 
 ENTRYPOINT [ "pipenv", "run" ]
+CMD [ "gunicorn", "-w", "4", "application" ]
