--- a/DockerFile
+++ b/DockerFile
@@ -12,6 +12,7 @@ RUN pipenv install
 COPY . /app
 
 EXPOSE 8000
+EXPOSE 5000
 
 ENTRYPOINT [ "pipenv", "run" ]
-CMD [ "gunicorn", "-w", "4", "application" ]
+CMD [ "gunicorn", "-w", "4", "-b", "0.0.0.0:8000" "application" ]
