--- a/DockerFile
+++ b/DockerFile
@@ -15,4 +15,4 @@ EXPOSE 8000
 EXPOSE 5000
 
 ENTRYPOINT [ "pipenv", "run" ]
-CMD [ "gunicorn", "-w", "4", "-b", "0.0.0.0:8000" "application" ]
+CMD [ "gunicorn", "-w", "4", "-b", "0.0.0.0:8000", "application" ]
