--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,4 @@
-FROM python:3.8-slim-buster
+FROM python:3.7.5-slim-buster
 
 COPY ./Pipfile /app/Pipfile
 COPY ./Pipfile.lock /app/Pipfile.lock
@@ -6,9 +6,8 @@ COPY ./Pipfile.lock /app/Pipfile.lock
 WORKDIR /app
 
 RUN pip3 install pipenv
-RUN pipenv --python 3.8
 RUN pipenv install gunicorn
-RUN pipenv install
+RUN pipenv install --ignore-pipfile
 
 COPY . /app
 
