--- a/DockerFile
+++ b/DockerFile
@@ -6,8 +6,8 @@ COPY ./Pipfile.lock /app/Pipfile.lock
 WORKDIR /app
 
 RUN pip3 install pipenv
+RUN pipenv sync
 RUN pipenv install gunicorn --skip-lock
-RUN pipenv install --ignore-pipfile
 
 COPY . /app
 
