--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ services:
 
 stages:
   - build
+  - test
   - push
 
 before_script:
@@ -18,6 +19,12 @@ build_image:
   script:
     - docker build --pull -f "DockerFile" --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA .
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+
+run_tests:
+  stage: test
+  script:
+    - docker pull $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+    - docker run $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA python -m unittest discover -p "*_test.py" -v
 
 push_latest:
   variables:
